# django_ninja_tutorial

./: .dockerignore  .gitignore  Docker_HOWTO.md  Dockerfile  Pipfile  README.md  code_snippet_explanation.md  docker-compose.yml  folder_structure_analysis.md  pyproject.toml  requirement.txt  requirements.txt  time_complexity.md
.github/workflows/: codspeed.yml  greetings.yml
apidemo/: db.sqlite3
apidemo/apidemo/: settings.py  urls.py
apidemo/test_app/: models.py  views.py
apidemo/test_app/migrations/: 0001_initial.py
