[project]
name = "dj-ninja"
version = "0.1.0"
description = "Django Ninja with SQLite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "asgiref==3.9.1",
    "click==8.2.1",
    "colorama==0.4.6",
    "django==5.2.6",
    "django-ninja==1.4.3",
    "granian==2.5.2",
    "orjson==3.11.3",
    "packaging==25.0",
    "pip==25.2",
    "pltable==1.1.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.1",
    "sqlparse==0.5.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
]

[tool.uv]
link-mode = "copy"
upgrade = true
