[project]
name = "dj-ninja"
version = "1.3.0"
description = "Django Ninja with SQLite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types",
    "asgiref",
    "click",
    "colorama",
    "django",
    "django-ninja",
    "granian",
    "orjson",
    "packaging",
    "pip",
    "pltable",
    "pydantic",
    "pydantic-core",
    "python-dotenv",
    "sqlparse",
    "typing-extensions",
    "typing-inspection",
    "tzdata",
]

[tool.uv]
link-mode = "copy"
upgrade = true
